responsive header section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
             <button class="btn btn-transp"><i class="fa-solid fa-bars"></i></button>
         </div>
     </nav>
+
+    <section class="Header">
+        <div class="Header-texts">
+            <h1>
+                Empowering Web Developers: Master the PERN Stack
+            </h1>
+            <p>
+                Build Dynamic Websites with PernStack - The Comprehensive Course for Modern Web Developers
+            </p>
+        </div>
+        <div class="Headers-btn">
+            <button class="btn-headers btn-showcase">Showcase</button>
+            <button class="btn-headers btn-chat">Chat to us</button>
+        </div>
+    </section>
+    <div class="Geometric-img-container">
+        <!-- <img src="./assets/Geometric shapes.svg" alt=""> -->
+    </div>
     
 </body>
 </html>
