responsive blog section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
     <div class="Geometric-img-container">
         <!-- <img src="./assets/Geometric shapes.svg" alt=""> -->
     </div>
+
+    <section class="blog-section">
+     <div class="blog-content-text">
+      <h2>Elevate Your Web Development Skills to New Heights</h2>
+      <p>
+        Welcome to PernStack, the ultimate web development course designed to equip you with the knowledge and skills needed to create dynamic, robust, and cutting-edge websites. Whether you're an aspiring developer or a seasoned professional looking to stay ahead in the ever-evolving world of web development, PernStack has you covered. <br><br>
+In this comprehensive course, you'll dive deep into the powerful combination of the PERN (PostgreSQL, Express.js, React, Node.js) stack, which forms the backbone of countless successful web applications. With hands-on projects, real-world examples, and expert guidance, you'll gain the confidence to build feature-rich, scalable, and responsive web applications that will impress clients and employers alike.
+      </p>
+     </div>
+     <div class="blog-content-img">
+        <img src="./assets/Image.png" alt="">
+     </div>
+    </section>
     
 </body>
 </html>
