responsive pricing section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,82 @@ In this comprehensive course, you'll dive deep into the powerful combination of 
         <img src="./assets/Image.png" alt="">
      </div>
     </section>
+
+
+
+    <section class="pricing-section">
+    
+    <div class="pricing-header">
+        <h2>Simple, transparent pricing</h2>
+        <p class="pricing-heading-para">Your journey to PERN expertise starts here.</p>
+    </div>
+
+    <div class="pricing-card-group">
+
+        <div class="pricing-card">
+            <div class="pricing-card-header">
+                <h3>Web Developer Freshman</h3>
+                <h1>$10/mth</h1>
+                <p>Billed annually.</p>
+            </div>
+
+            <div class="pricing-card-items">
+                <div class="card-item"> <img src="./assets/Check icon.svg" alt=""> <p>Access to all course materials</p></div>
+                <div class="card-item"> <img src="./assets/Check icon.svg" alt=""> <p>One project assignment</p></div>
+                <div class="card-item"> <img src="./assets/Check icon.svg" alt=""> <p>Email support</p></div>
+                <div class="card-item"> <img src="./assets/Cross icon.svg" alt=""> <p>Q&A webinars</p></div>
+                <div class="card-item"> <img src="./assets/Cross icon.svg" alt=""> <p>One-on-one feedback</p></div>
+            </div>
+
+            <div class="card-footer">
+            <button class="btn-pricing">Get started</button>
+            </div>
+        </div>
+
+        <div class="pricing-card">
+            <div class="pricing-card-header">
+                <h3>Web Developer Freshman</h3>
+                <h1>$10/mth</h1>
+                <p>Billed annually.</p>
+            </div>
+
+            <div class="pricing-card-items">
+                <div class="card-item"> <img src="./assets/Check icon.svg" alt=""> <p>Access to all course materials</p></div>
+                <div class="card-item"> <img src="./assets/Check icon.svg" alt=""> <p>One project assignment</p></div>
+                <div class="card-item"> <img src="./assets/Check icon.svg" alt=""> <p>Email support</p></div>
+                <div class="card-item"> <img src="./assets/Cross icon.svg" alt=""> <p>Q&A webinars</p></div>
+                <div class="card-item"> <img src="./assets/Cross icon.svg" alt=""> <p>One-on-one feedback</p></div>
+            </div>
+
+            <div class="card-footer">
+            <button class="btn-pricing">Get started</button>
+            </div>
+        </div>
+
+
+        <div class="pricing-card">
+            <div class="pricing-card-header">
+                <h3>Web Developer Freshman</h3>
+                <h1>$10/mth</h1>
+                <p>Billed annually.</p>
+            </div>
+
+            <div class="pricing-card-items">
+                <div class="card-item"> <img src="./assets/Check icon.svg" alt=""> <p>Access to all course materials</p></div>
+                <div class="card-item"> <img src="./assets/Check icon.svg" alt=""> <p>One project assignment</p></div>
+                <div class="card-item"> <img src="./assets/Check icon.svg" alt=""> <p>Email support</p></div>
+                <div class="card-item"> <img src="./assets/Cross icon.svg" alt=""> <p>Q&A webinars</p></div>
+                <div class="card-item"> <img src="./assets/Cross icon.svg" alt=""> <p>One-on-one feedback</p></div>
+            </div>
+
+            <div class="card-footer">
+            <button class="btn-pricing">Get started</button>
+            </div>
+        </div>
+
+    </div>
+
+    </section>
     
 </body>
 </html>
