added statistics section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,48 @@ In this comprehensive course, you'll dive deep into the powerful combination of 
     </div>
 
     </section>
+
+
+    <section class="stats-section">
+        <div class="stats-section-head">
+            <h2>Empowering Developers from Day One</h2>
+            <p>Why PernStack is the Preferred Choice</p>
+        </div>
+
+        <div class="stats">
+            <div class="stats-container">
+                
+            <div class="stat-row">
+                <div class="stat">
+                  <h1>10k+</h1>
+                  <h5>Students enrolled</h5>
+                  <p>Over 8k+ students have successfully completed the PernStack course.</p>
+                </div>
+                <div class="stat">
+                  <h1>500+</h1>
+                  <h5>Real World Projects</h5>
+                  <p>Graduates have built over 500 real-world web applications using PernStack.</p>
+                </div>
+            </div>
+            <div class="stat-row">
+                <div class="stat">
+                  <h1>95%</h1>
+                  <h5>Alumni are now employed</h5>
+                  <p>95% of PernStack alumni landed new job opportunities after completing the course.</p>
+                </div>
+                <div class="stat">
+                  <h1>5k+</h1>
+                  <h5>5-star reviews</h5>
+                  <p>We’re proud of our 5-star rating with over 5k reviews.</p>
+                </div>
+            </div>
+
+            </div>
+            <div class="stats-img">
+                <img src="./assets/img2.jpeg" alt="">
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
