--- a/index.html
+++ b/index.html
@@ -179,5 +179,35 @@ In this comprehensive course, you'll dive deep into the powerful combination of 
         </div>
     </section>
     
+
+
+
+    <section class="chat-section">
+        <div class="chat-container">
+            <div class="chat-content-left">
+                <h2>Chat to our friendly team</h2>
+                <p>We’d love to hear from you! Please get in touch.</p>
+            </div>
+
+            <div class="chat-content-right">
+                <div class="chats">
+                    <img src="./assets/chats.svg" alt="">
+                    <div class="chats-head">
+                        <h3>IIUC Campus</h3>
+                        <p>CX Building, IIUC Male Campus, Kumira</p>
+                    </div>
+                </div>
+                <div class="chats">
+                    <img src="./assets/chats.svg" alt="">
+                    <div class="chats-head">
+                        <h3>IIUC Campus</h3>
+                        <p>CX Building, IIUC Male Campus, Kumira</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
 </body>
 </html>
