--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head> 
 <body>
 
+
+    <div class="body-container">
     <nav>
         <div class="nav">
             <img src="./assets/Logo.svg">
@@ -180,34 +182,58 @@ In this comprehensive course, you'll dive deep into the powerful combination of 
     </section>
     
 
+    
 
-
-    <section class="chat-section">
-        <div class="chat-container">
-            <div class="chat-content-left">
-                <h2>Chat to our friendly team</h2>
-                <p>We’d love to hear from you! Please get in touch.</p>
-            </div>
-
-            <div class="chat-content-right">
-                <div class="chats">
-                    <img src="./assets/chats.svg" alt="">
-                    <div class="chats-head">
-                        <h3>IIUC Campus</h3>
-                        <p>CX Building, IIUC Male Campus, Kumira</p>
-                    </div>
-                </div>
-                <div class="chats">
-                    <img src="./assets/chats.svg" alt="">
-                    <div class="chats-head">
-                        <h3>IIUC Campus</h3>
-                        <p>CX Building, IIUC Male Campus, Kumira</p>
-                    </div>
-                </div>
-            </div>
-
+</div>
+<section class="chat-section">
+    <div class="chat-container">
+        <div class="chat-content-left">
+            <h2>Chat to our friendly team</h2>
+            <p>We’d love to hear from you! Please get in touch.</p>
         </div>
 
-    </section>
+        <div class="chat-content-right">
+            <div class="chats">
+                <img src="./assets/chats.svg" alt="">
+                <div class="chats-head">
+                    <h3>IIUC Campus</h3>
+                    <p>CX Building, IIUC Male Campus, Kumira</p>
+                </div>
+            </div>
+            <div class="chats">
+                <img src="./assets/chats.svg" alt="">
+                <div class="chats-head">
+                    <h3>IIUC Campus</h3>
+                    <p>CX Building, IIUC Male Campus, Kumira</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+<footer>
+    <div class="footer-nav">
+        <img src="./assets/Logo - footer.svg" alt="">
+        <div class="footer-nav-items">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Pricing</a>
+            <a href="">Contact</a>
+        </div>
+    </div>
+    <div class="footer-feet">
+       <div class="footer-feet-container">
+        <p>© 2023 IMP PernStack. All rights reserved.</p>
+        <div class="footer-feet-items">
+            <a href="">Terms</a>
+            <a href="">Privacy</a>
+            <a href="">cookies</a>
+        </div>
+       </div>
+    </div>
+</footer>
+
 </body>
 </html>
